// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with size=Base and mode=Primary 1`] = `
<button
  className="rounded-md px-4 py-2 text-sm border-transparent bg-indigo-600 text-white hover:bg-indigo-700 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=Base and mode=Secondary 1`] = `
<button
  className="rounded-md px-4 py-2 text-sm border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=Large and mode=Primary 1`] = `
<button
  className="rounded-md px-4 py-2 text-base border-transparent bg-indigo-600 text-white hover:bg-indigo-700 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=Large and mode=Secondary 1`] = `
<button
  className="rounded-md px-4 py-2 text-base border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=Small and mode=Primary 1`] = `
<button
  className="rounded-md px-3 py-2 text-sm border-transparent bg-indigo-600 text-white hover:bg-indigo-700 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=Small and mode=Secondary 1`] = `
<button
  className="rounded-md px-3 py-2 text-sm border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=XLarge and mode=Primary 1`] = `
<button
  className="rounded-md px-6 py-3 text-base border-transparent bg-indigo-600 text-white hover:bg-indigo-700 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=XLarge and mode=Secondary 1`] = `
<button
  className="rounded-md px-6 py-3 text-base border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=XSmall and mode=Primary 1`] = `
<button
  className="rounded px-2.5 py-1.5 text-xs border-transparent bg-indigo-600 text-white hover:bg-indigo-700 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;

exports[`Button renders correctly with size=XSmall and mode=Secondary 1`] = `
<button
  className="rounded px-2.5 py-1.5 text-xs border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 inline-flex items-center border focus:outline-none font-medium shadow-sm"
>
  Button
</button>
`;
